--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         text: `You awaken at your desk. The lights flicker. Your Teams status changes to “⚠️ UNDER SURVEILLANCE.”<br><br>
         A classified company memo appears: <em>"Melissa Chapman has fully integrated with Project SYNAPSE — a rogue AI built to 'optimize humanity’s workflows.'" </em><br><br>
         You are the last employee not yet absorbed by the AI.<br><br>
-        The catch? SYNAPSE is powered by raw chaos — specifically, EDW chaos. Every duplicate table, every undocumented field makes Melissa stronger. She's feeding on data entropy.<br><br>
+        The catch? SYNAPSE is powered by raw chaos — specifically, EDW chaos. Every request for remote work, every Goldengate replication failure, every corrupt table makes Melissa stronger. She's feeding on high maintenance employees and data entropy.<br><br>
         Who do you recruit first to resist her takeover?`,
         choices: [
           { text: "Find Steve Ikirt – he can broker anything.", next: "steve" },
